gcc/testsuite/rust/compile/issue-4261.rs
#![feature(no_core)]
#![no_core]

#[cfg()]
// { dg-error "malformed .cfg. attribute input" "" { target *-*-* } .-1 }
fn a() {}
